--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.4
   async: ^2.8.2
+  url_launcher: ^6.0.18
 
 dev_dependencies:
   flutter_test:
